create analysis.py for eigenfunction analysis

--- a/quadfirst.tex
+++ b/quadfirst.tex
@@ -391,14 +391,14 @@ Fig.~\ref{fig:eigenfunction}.
 \begin{figure}
   \centering
     \resizebox{1.0\columnwidth}{!}{
-      \includegraphics{figs/800_g_800_h_8_y_vec_log.png}}
+      \includegraphics{figs/2000_g_800_h_2_y_vec_log.png}}
     \caption{The $\text{log}_{10}$ of the amplitude of a numerically
       estimated eigenfunction.}
   \label{fig:Av3}
 \end{figure}
 
 \onecolumn
-\section{Attempts to Solve the Integral Equation}
+\section{Analysis of the Integral Equation}
 \label{sec:solve}
 
 Differentiating
