Scons build compare.pdf.  Put it in quadfirst.pdf.

--- a/quadfirst.tex
+++ b/quadfirst.tex
@@ -501,6 +501,15 @@ The equation
 follows from retaining \eqref{eq:t2}.  A numerical solution to
 \eqref{eq:ugly} appears in Fig.~\ref{fig:ugly}.
 
+\begin{figure}
+  \centering
+    \resizebox{1.0\columnwidth}{!}{
+      \includegraphics{compare.pdf}}
+    \caption{A comparison of the asymptotic solution \eqref{eq:sol_h}
+      and a numerically estimated eigenfunction.}
+  \label{fig:Av3}
+\end{figure}
+
 
 
 
