--- a/like_gun/README
+++ b/like_gun/README
@@ -3,11 +3,11 @@ gun data and models.
 
 Plans:
 
-1. Extract simple code for gun from parent directory
+x1. Extract simple code for gun from parent directory
 
-2. Write code for spline f
+x2. Write code for spline f
 
-3. Write perturbed EOS f and use it for gun
+x3. Write perturbed EOS f and use it for gun
 
 4. Write code for log likelihood L and derivative of L wrt to v_sim
 
