--- a/like_gun/README
+++ b/like_gun/README
@@ -11,6 +11,8 @@ x3. Write perturbed EOS f and use it for gun
 
 x4. Write code for log likelihood L and derivative of L wrt to v_sim
 
-5. Write code for d v_sim / d f
+x5. Write code for d v_sim / d f
 
-6. Write optimization code
+6. Check that plots of DE are monotonic
+
+7. Write optimization code
