--- a/like_gun/README
+++ b/like_gun/README
@@ -13,4 +13,9 @@ x4. Write code for log likelihood L and derivative of L wrt to v_sim
 
 x5. Write code for d v_sim / d f
 
-6. Write optimization code
+x6. Write optimization code
+
+7. Devise MAP scheme and explain in notes.tex
+
+8. Implement MAP scheme
+
