--- a/like_gun/notes.tex
+++ b/like_gun/notes.tex
@@ -1,4 +1,4 @@
-\documentclass[]{article}
+\documentclass[12pt]{article}
 \usepackage{amsmath,amsfonts,afterpage}
 \usepackage{showlabels}
 \usepackage[pdftex]{graphicx,color}
@@ -53,8 +53,9 @@ to estimate a new model, $\fhat$.
 \begin{description}
 \item[$(\vexp, \texp)$:] An experimental sequence of measured pairs of
   velocity and time
-\item[$\bv$:] A model sequence of velocities
-\item[$\Vt$:] A model map from  times to velocities, eg, $\bv = \Vt(\texp)$
+\item[$\bv$:] A sequence of model velocities
+\item[$\Vt$:] A map from times to model velocities, eg, $\bv =
+  \Vt(\texp)$
 \item[$\tsim$:] A sequence of closely spaced sample times at which to record
   simulated position and velocity for constructing $\Vt$.
 \item[$f$:] An EOS function
@@ -64,9 +65,11 @@ to estimate a new model, $\fhat$.
   that define a $\Vt$
 \item[$\cf,\fbasis$:] Vector of spline coefficients and basis functions
   that define an EOS
-\item[$\DVDf$:] The derivative of $\Vt$ with respect to $f$;
-  represented by the matrix $\partiald{\cv}{\cf}$.  Very expensive to
-  evaluate.
+\item[$D$] Matrix with elements $D[j,k] = \partiald{\cv[j]}{\cf[k]}$
+\item[$B$] Matrix with elements $B[i,j] = \vbasis[j](\texp[i])$
+\item[$\DVDf$:] The derivative of $\Vt$ with respect to $f$; very
+  expensive to evaluate.  $\DVDf (\texp)$ is represented by the matrix
+  $(BD)^T$.
 \end{description}
 
 \subsection{Implementation}
@@ -79,65 +82,97 @@ to estimate a new model, $\fhat$.
 \item[$\Vt$:] Call the spline evaluation method to get $\bv = \Vt(\texp)$
 \item[$f$:] A spline with coefficients $\cf$ and basis functions
   $\fbasis$
-\item[$\DVDf$:] Use $N(\cf)+1$ different sets of coefficients $\cf$ to
-  get as many EOSs $f$ and evaluate $\Vfunc(f)$ for each.  Use these
-  finite differences to get a matrix that approximates
-  $\partiald{\cv}{\cf}$.
+\item[$\DVDf$:] Evaluate $\Vfunc(f)$ for $N(\cf)+1$ different sets of
+  coefficients $\cf$, and use finite differences to get a matrix with
+  elements $D[j,k] = \partiald{\cv[j]}{\cf[k]}$.  Then
+  \begin{equation*}
+    \partiald{\Vt(T)}{\cf[k]} = \sum_j D[j,k] \vbasis[j](T).
+  \end{equation*}
 \end{description}
 
 \section{Priors, Likelihood and Optimization}
 \label{sec:opt}
 
+\subsection{Minimum Squared Error}
+\label{sec:minsq}
+
+Before calculating the step for the full log a posteriori probability,
+I calculate a least squares step (maximizing the likelihood if all
+$\sigma_v[i]$ are equal to each other).  Thus, I wish to find $d$ that
+minimizes
+\begin{equation}
+  \label{eq:ssq}
+  \tilde S(d) = \sum_{i=1}^{N_{\rm exp}} (\vexp[i] - \Vt_{f+\delta}(\texp[i]))^2,
+\end{equation}
+where $f+\delta = \sum_k (\cf[k] + d[k])\fbasis[k]$, and 
+\begin{equation}
+  \label{eq:taylor}
+  \Vt_{f+\delta}(\texp[i]) = \Vt_f(\texp[i]) +
+  \sum_j \sum_k \partiald{\cv[j]}{\cf[k]}d[k]\vbasis[j](\texp[i])
+  +\text{ HOT}.
+\end{equation}
+Letting $\epsilon[i]$ denote $\vexp[i] - \Vt_f(\texp[i])$ and dropping
+HOT, I write
+\begin{align*}
+  S(d) &\equiv \tilde S(d) - \text{HOT} = \sum_i \left( \epsilon[i] -
+  \sum_j \sum_k \partiald{\cv[j]}{\cf[k]}d[k]\vbasis[j](\texp[i])
+  \right)^2\\
+  &= (\epsilon - BDd)^T(\epsilon - BDd)
+\end{align*}
+and
+\begin{align*}
+  \partiald{S}{d[l]} &= -2 \sum_i \left( \epsilon[i] -
+  \sum_j \sum_k \partiald{\cv[j]}{\cf[k]}d[k]\vbasis[j](\texp[i])
+  \right)
+  \sum_j \partiald{\cv[j]}{\cf[l]}\vbasis[j](\texp[i])\\
+  \partiald{S}{d} &= -2\left(BD\right)^T\left(\epsilon - BDd\right).
+\end{align*}
+Thus I seek $\hat d$ that solves
+\begin{equation}
+  \label{eq:dhat}
+  \left(BD\right)^T\epsilon = \left(BD\right)^T BD \hat d.
+\end{equation}
+
+\subsection{A Posteriori Probability}
+\label{sec:app}
+
 I use Gaussians with constant diagonal covariances for priors and
 likelihood as follows:
 \begin{align}
-\vexp,\texp | f &\sim \normal{\vexp-\Vt_f(\texp)}{\Sigma_v} \\
-\cf &\sim \normal{\cf - c_{\fnom}}{\Sigma_{\cf}}
+\vexp,\texp | f+\delta &\sim
+\normal{\vexp-\Vt_{f+\delta}(\texp)}{\Sigma_v} \\
+\cf+d &\sim \normal{\cf+d - c_{\fnom}}{\Sigma_f}
 \end{align}
 Up to irrelevant constants $K$ the log probabilities are:
 \begin{align}
-  L(\cf) & \equiv \log(K_2) + \log \left(\Prob(\cf) \right)\\
-  & = \normalexp{\cf}{c_{\fnom}}{\Sigma_{\cf}}\\
-  L(\Vt_f) & \equiv \log(K_1) + \log \left(\Prob(\vexp,\texp | f) \right)
+  L_c(\cf+d) & \equiv \log(K_2) + \log \left(\Prob(\cf+d) \right)\\
+  & = \normalexp{\cf+d}{c_{\fnom}}{\Sigma_f}\\
+  L_v(\Vt_{f+\delta}) & \equiv \log(K_1) + \log
+  \left(\Prob(\vexp,\texp | f+\delta) \right)
   \nonumber \\
-  & = \normalexp{\vexp}{\Vt_f(\texp)}{\Sigma_v} \\
-  &= -\sum_{i=1}^{N_{\rm exp}} \frac{(\vexp[i] -
-    \Vt_f(\texp[i]))^2}{2\sigma_v[i]}, \\
-  & \text{and in terms of spline coefficients }\cv[j]\text{ and basis
-    functions } \vbasis[j]\\
-  \label{eq:vfsum}
-  \Vt_f(\texp[i]) &= \sum_j \cv[j]\vbasis[j](\texp[i]).
+  & = \normalexp{\vexp}{\Vt_{f+\delta}(\texp)}{\Sigma_v} \\
+  &= \normalexp{\epsilon}{BDd}{\Sigma_v}.
 \end{align}
-In \eqref{eq:vfsum} the only term on the right that depends on the EOS
-$f$ is $\cv[j]$.  If $f=\sum_k \cf[k] \fbasis[k]$ and $\delta=\sum_k d[k]
-\fbasis[k]$, then
-\begin{equation}
-  \label{eq:taylor}
-  \Vt_{f+\delta}(\texp[i]) = \sum_j \cv[j]\vbasis[j](\texp[i]) +
-  \sum_j \sum_k \DVDf[j,k]d[k]\vbasis[j](\texp[i]) +\text{ HOT}.
-\end{equation}
 
 Given $f$ (in terms of $\cf$) and the functions $\Vt$, $\DVDf$, etc.\
 that depend on it, an optimization step consists of ignoring the
-\emph{higher order terms} (HOT) in \eqref{eq:taylor} and solving for
-the vector $d$ that maximizes
+\emph{higher order terms} (HOT) and solving for the vector $d$ that
+maximizes
 \begin{equation}
   \label{eq:L}
-  \Lbb(\cf,d) = L(c_{f+\delta}) +
-  \Lbb(f+\delta) \equiv L(\Vt_{f+\delta}(\texp)).
+  \Lbb(\cf,d) = L_c(\cf + d) + L_v(\Vt_{f+\delta}(\texp)).
 \end{equation}
 Differentiating, I find
 \begin{align*}
-  \frac{d \Lbb(\cf,d)}{d d} &= (c_{\fnom} - \cf - d)^T
-  \Sigma^{-1}_{\cf} + \sum_{i=1}^{N_{\rm exp}}
-  \frac{\Vt_{f+\delta}(\texp[i]) - \vexp[i] }{\sigma_v[i]}
-  \frac{d \Vt_{f+\delta}(\texp[i])}{d d} \\
-  \frac{d \Lbb(\cf,d)}{d d[k]} &= 
-  \frac{c_{\fnom}[k] - \cf[k] - d[k]}{\sigma_{\cf}[k]} +
-  \sum_{i=1}^{N_{\rm exp}}
-  \frac{\Vt_{f+\delta}(\texp[i]) - \vexp[i] }{\sigma_v[i]}
-  \sum_j \DVDf[j,k] \vbasis[j] (\texp[i])
+  \partiald{\Lbb(\cf,d)}{d} &= (c_{\fnom} - \cf - d)^T
+  \Sigma^{-1}_f + (\epsilon - BDd)^T \Sigma_v^{-1}BD.
 \end{align*}
+Thus I seek $\hat d$ that solves
+\begin{equation}
+  \label{eq:dmap}
+  (BD)^T\epsilon + \Sigma_f^{-1} (c_{\tilde f} - \cf) = 
+  \left((BD)^T\Sigma_v^{-1}BD + \Sigma_f^{-1} \right) \hat d.
+\end{equation}
 
 
 \end{document}
