--- a/like_gun/notes.tex
+++ b/like_gun/notes.tex
@@ -175,6 +175,10 @@ Thus I seek $\hat d$ that solves
   \left((BD)^T\Sigma_v^{-1}BD + \Sigma_f^{-1} \right) \hat d.
 \end{equation}
 
+\section*{Appendix}
+\label{sec:appendix}
+
+See other information in cmfSuite/doc/HE.tex
 
 \end{document}
 
