eric.py plots plausible pie slices

--- a/quadfirst.tex
+++ b/quadfirst.tex
@@ -274,7 +274,7 @@ of points in $G\times H$ that satisfy
 \end{subequations}
 The image of each point $(g_0, h_0)$ is a \emph{pie slice} defined by
 the intersection of a wedge and the domain $D$.  Each wedge has an
-apex at $(g_0+h_0-6, h_0-6)$, and from the apex, one edge is vertical
+apex at $(g_0+h_0-6, h_0-12)$, and from the apex, one edge is vertical
 and the other has unit slope $\frac{d\, h}{d\, g} = 1$.  I consider
 the following three kinds of pie slices, $P$
 \begin{description}
@@ -283,6 +283,15 @@ the following three kinds of pie slices, $P$
 \item[Interior:] All other cases
 \end{description}
 
+The equation
+\begin{subequations}
+  \label{eq:boundary}
+  \begin{align}
+  g &= u -\frac{h^2}{24}\\
+  g &= =u
+  \end{align}
+\end{subequations}
+are the boundaries of $D$.
 \section{Integral Equations}
 \label{sec:integral-equations}
 
