Minor changes sent to Eric too

--- a/quadfirst.tex
+++ b/quadfirst.tex
@@ -248,23 +248,20 @@ Figure~\ref{fig:boundsC} illustrates those constraints.
 \section{Scaling and Pie Slices}
 \label{sec:scaling}
 
-Eric Mjolsness suggested calculating moments of the images of each
-allowed point in ${\cal G} \times {\cal H}$.  In thinking about that
-calculation, I noticed that there is only one parameter in the problem.
-While both $\Delta_y$ and $u$ appear in \eqref{eq:UL_g} and
-\eqref{eq:UL_h}, in the alternative coordinates in which $\Delta_y=1$,
-ie,
+As Eric Mjolsness suggested, I've calculated moments of the images of
+each allowed point in ${\cal G} \times {\cal H}$.  While both
+$\Delta_y$ and $u$ appear in \eqref{eq:UL_g} and \eqref{eq:UL_h}, in
+the alternative coordinates in which $\Delta_y=1$, ie,
 \begin{align*}
   \tilde g(g) &= \frac{g}{\Delta_y^2} \\
-  \tilde h(h) &= \frac{h}{\Delta_y}
+  \tilde h(h) &= \frac{h}{\Delta_y},
 \end{align*}
-it is clearer that the behavior near $\tilde g=d$ does not depend on
+it is clear that the behavior near $\tilde g=d$ does not depend on
 $\Delta_y$, and that the ratio $d = \frac{u}{\Delta_y^2}$ is the
-number that characterizes the problem.
+number that characterizes the problem.  Without loss of generality, in
+this section, I assume $\Delta_y=1$ and let $d$ define the problem.
 
-So, without loss of generality, in this section, I assume $\Delta_y=1$
-and let $d$ define the problem.  The domain of the problem is the
-set of points
+The domain of the problem is the set of points
 \begin{equation*}
   D = \left\{ z = (g,h) :
     \begin{array}{l}
@@ -275,26 +272,28 @@ set of points
 \end{equation*}
 and the image of each point $z_0 \in D$ is a \emph{pie slice} $P(z_0)$
 defined by the intersection of a wedge and $D$.  In
-Figure~\ref{fig:eric} I've labeled the points
+Figure~\ref{fig:eric}, I've labeled the points
 \begin{align*}
   z_1 &= \left( \hb, \gb \right) \\
   z_2 &= \left( \hc, \gc \right) \\
   z_3 &= \left( \hd, \gd \right)
 \end{align*}
 where $z_1$ is the wedge apex and $z_2$/$z_3$ is the intersection of
-the upper/lower edge of the wedge with the boundary respectively.
+the upper/lower edge of the wedge with the boundary
+respectively\footnote{Since the diagonal edge of each wedge is along a
+  line through both $(0,g_0)$ and $(h_1,g_1)$, $z_2$ depends on $g_0$
+  alone.}.
 
 Results from calculating moments of the images with the python sympy
 package are too complex to be enlightening.  The parts that fit on
-single lines appear in Eqn.~\eqref{eq:sympy}.  However,
-Figure~\ref{fig:eric} suggests that the expressions are correct.  The
-ellipses in the figure are the level sets
+single lines appear in Eqn.~\eqref{eq:sympy}.  In
+Figure~\ref{fig:eric}, the ellipses that are the level sets
 \begin{equation*}
   \left\{ z : (z-\mu)^T \Sigma^{-1} (z-\mu) = 2 \right\}
 \end{equation*}
-for the image sets $P(z_0)$ of four initial points $z_0$.  I used
-sympy functions to substitute floating point values in for variables
-in the analytic expressions to draw the ellipses.
+for the image sets $P(z_0)$ of four initial points $z_0$ are more
+informative.
+%
 \onecolumn
 \begin{landscape}
 \begin{figure}
@@ -345,7 +344,7 @@ Figure~\ref{fig:eric}.  There seem to be the following three regimes:
 \end{description}
 I conjecture that for large $d$, the effect of the truncation at small
 $g$ decays as the flow moves through the intermediate $g$ regime and
-the eigenfunction away from the big $g$ region converges as
+the eigenfunction away from the small $g$ region converges as
 $d\rightarrow \infty$.  I don't know if the conjecture implies
 convergence to a measure on functions as $\Delta_y \rightarrow 0$.
 
